run tvheadend as our own 'downloads' user

--- a/tmpfile.conf
+++ b/tmpfile.conf
@@ -1,4 +1,4 @@
-d /etc/tvheadend 0750 tvheadend tvheadend -
-d /var/lib/tvheadend 0755 tvheadend tvheadend -
-Z /var/lib/tvheadend/data - tvheadend tvheadend -
-Z /var/lib/tvheadend/src - tvheadend tvheadend -
+d /etc/tvheadend 0750 downloads downloads -
+d /var/lib/tvheadend 0755 downloads downloads -
+Z /var/lib/tvheadend/data - downloads downloads -
+Z /var/lib/tvheadend/src - downloads downloads -
