--- a/user.conf
+++ b/user.conf
@@ -1,2 +1,2 @@
-u tvheadend - "TVHeadend user" /var/lib/tvheadend
-m tvheadend video
+u downloads - "TVHeadend user" /var/lib/tvheadend
+m downloads video
