run tvheadend as our own 'downloads' user

--- a/user.conf
+++ b/user.conf
@@ -1,2 +1,2 @@
-u tvheadend - "Tvheadend user" /var/lib/tvheadend
-m tvheadend video
+u downloads - "Tvheadend user" /var/lib/tvheadend
+m downloads video
